SONAR-17352 Refactor component keys to not include branch suffix